# rust-api-sqlite

./: .gitignore  Cargo.toml  README.md
migrations/2023-01-07-140816_create_users/: up.sql
src/: controllers.rs  db.rs  main.rs  models.rs  schema.rs
src/controllers/: general_controllers.rs  mod.rs  user_controllers.rs
src/models/: user_models.rs
