[package]
edition = "2018"
name = "rust-api-sqlite"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3"
anyhow = "1.0"
chrono = "0.4.15"
diesel = {version = "1.4.5", features = ["sqlite", "r2d2"]}
diesel_migrations = "1.4"
dotenv = "0.15.0"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
